--- a/_data/take5/GYM-5012.yml
+++ b/_data/take5/GYM-5012.yml
@@ -7,7 +7,10 @@ url: /courses/take5/GYM-5012/
 poster_art: /img/take5/posters/gym-5012.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Prototyping"
+topic: "Development"
+subtopics:
+subtopics:
+  - label: "Prototyping"
 video_ID: IqAizKPCC9U
 video_duration: "4:59"
 featured: false
@@ -27,4 +30,5 @@ related_content:
   url: "https://medium.com/gymnasium/css-grid-layout-a-cornucopia-of-options-90a5ee10ad9f"
 - label: "Get Ready for CSS Grid Layout by Rachel Andrew"
   url: "https://abookapart.com/products/get-ready-for-css-grid-layout"
+skill_level: "Intermediate"
 ---
