--- a/_data/take5/GYM-5016.yml
+++ b/_data/take5/GYM-5016.yml
@@ -21,4 +21,5 @@ related_content:
   url: "https://webstandardssherpa.com/reviews/storytelling-in-web-design.html"
 - label: "Storytelling for Business Growth and Long-Term Accomplishment by James Kerr"
   url: "https://www.inc.com/james-kerr/story-telling-for-business-growth-and-long-term-accomplishment.html"
+skill_level: "Beginner"
 ---
