--- a/_data/take5/GYM-5018.yml
+++ b/_data/take5/GYM-5018.yml
@@ -19,4 +19,5 @@ related_content:
   url: "https://futureofstorytelling.org/video/john-maeda-from-storytelling-to-storylistening"
 - label: "Build your design portfolio around one awesome story by Jake Knappl"
   url: "https://medium.com/@jakek/build-your-design-portfolio-around-one-and-only-one-awesome-story-d3995f74cf47"
+skill_level: "Beginner"
 ---
