--- a/_data/take5/GYM-5019.yml
+++ b/_data/take5/GYM-5019.yml
@@ -21,4 +21,5 @@ related_content:
   url: "https://sproutsocial.com/insights/social-media-image-sizes-guide/#twitter"
 - label: "Formatting profile and header images for LinkedIn"
   url: "https://sproutsocial.com/insights/social-media-image-sizes-guide/#linkedin"
+skill_level: "Beginner"
 ---
