--- a/_data/take5/GYM-5020.yml
+++ b/_data/take5/GYM-5020.yml
@@ -21,4 +21,5 @@ related_content:
   url: "https://changingtheterms.com/2018/08/13/four-dimensions-of-internal-influence-ambassadors-influencers-advocates-and-followers/"
 - label: "Identifying and managing your project stakeholders by Brandi Gratis"
   url: "https://backlog.com/blog/identifying-managing-project-stakeholders/"
+skill_level: "Beginner"
 ---
