--- a/_data/take5/GYM-5022.yml
+++ b/_data/take5/GYM-5022.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5022/
 poster_art: /img/take5/posters/gym-5022.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Design & Development"
+topic: "Design"
 video_ID: fOP3xEY77bc
 video_duration: "4:57"
 featured: false
@@ -23,4 +23,5 @@ related_content:
   url: "https://iconhandbook.co.uk/book/"
 - label: "Sketch Quick Tip: Avoid sub-pixels on outline icons by Martin Maricak"
   url: "https://lockerroom.hellephant.com/sketch-quick-tip-avoid-sub-pixels-on-the-outline-icons-7c55400e6ab1"
+skill_level: "Beginner"
 ---
