--- a/_data/take5/GYM-5030.yml
+++ b/_data/take5/GYM-5030.yml
@@ -7,7 +7,9 @@ url: /courses/take5/GYM-5030/
 poster_art: /img/take5/posters/gym-5030.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Prototyping"
+topic: "UX"
+subtopics:
+  - label: "Prototyping"
 video_ID: X-uDu6Wfdfc
 video_duration: "4:33"
 featured: false
@@ -23,4 +25,5 @@ related_content:
   url: "https://youtu.be/t82XRda5DnY"
 - label: "Gymnasium: Animating Microinteractions with Figma"
   url: "https://thegymnasium.com/courses/take5/animating-microinteractions-with-figma"
+skill_level: "Intermediate"
 ---
