--- a/_data/take5/GYM-5032.yml
+++ b/_data/take5/GYM-5032.yml
@@ -29,6 +29,7 @@ related_content:
   url: "https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/Complementary_role"
 - label: "Using VoiceOver to Evaluate Web Accessibility"
   url: "https://webaim.org/articles/voiceover/"
+skill_level: "Beginner"
 ---
 
 
