--- a/_data/take5/GYM-5038.yml
+++ b/_data/take5/GYM-5038.yml
@@ -19,4 +19,5 @@ related_content:
   url: "https://dequeuniversity.com/assets/html/jquery-summit/html5/slides/headings.html"
 - label: "Lists in HTML"
   url: "https://accessibility.psu.edu/listshtml/"
+skill_level: "Beginner"
 ---
