--- a/_data/take5/GYM-5039.yml
+++ b/_data/take5/GYM-5039.yml
@@ -23,4 +23,5 @@ related_content:
   url: "https://webaim.org/techniques/tables/data"
 - label: "Accessibility Tutorials: Tables Concepts"
   url: "https://www.w3.org/WAI/tutorials/tables/"
+skill_level: "Beginner"
 ---
