--- a/_data/take5/GYM-5040.yml
+++ b/_data/take5/GYM-5040.yml
@@ -19,4 +19,5 @@ related_content:
   url: "https://www.w3.org/WAI/tutorials/images/decision-tree/"
 - label: "Alt text and image descriptions made simple"
   url: "https://meloukhia.net/2016/10/alt_text_and_image_descriptions_made_simple/"
+skill_level: "Beginner"
 ---
