--- a/_data/take5/GYM-5041.yml
+++ b/_data/take5/GYM-5041.yml
@@ -19,4 +19,5 @@ related_content:
   url: "https://accessibility.psu.edu/images/charts/"
 - label: "Writing Alt Text for Data Visualization by Amy Cesal"
   url: "https://medium.com/nightingale/writing-alt-text-for-data-visualization-2a218ef43f81"
+skill_level: "Beginner"
 ---
