--- a/_data/take5/GYM-5042.yml
+++ b/_data/take5/GYM-5042.yml
@@ -23,4 +23,5 @@ related_content:
   url: "https://colorbrewer2.org"
 - label: "Color Oracle - Design for the Color Impaired"
   url: "https://colororacle.org"
+skill_level: "Beginner"
 ---
