--- a/_data/take5/GYM-5043.yml
+++ b/_data/take5/GYM-5043.yml
@@ -23,4 +23,5 @@ related_content:
   url: "https://css-tricks.com/understanding-web-accessibility-color-contrast-guidelines-and-ratios/"
 - label: "Color Contrast And Why You Should Rethink It"
   url: "https://www.smashingmagazine.com/2014/10/color-contrast-tips-and-tools-for-accessibility/"
+skill_level: "Beginner"
 ---
