--- a/_data/take5/GYM-5044.yml
+++ b/_data/take5/GYM-5044.yml
@@ -7,7 +7,9 @@ url: /courses/take5/GYM-5044/
 poster_art: /img/take5/posters/gym-5044.jpg
 live: true
 instructor: "Clarissa Peterson"
-topic: "Accessibility"
+topic: "Development"
+subtopics:
+  - label: "Accessibility"
 video_ID: 72nrJJAf_Ak
 video_duration: "4:43"
 featured: false
@@ -21,4 +23,5 @@ related_content:
   url: "https://webaim.org/techniques/forms/advanced"
 - label: "Building Accessible Forms in Front-End Applications by Oyetoke Tobi Emmanuel"
   url: "https://medium.com/better-programming/building-accessible-forms-in-front-end-applications-7446cc3f1644"
+skill_level: "Beginner"
 ---
