--- a/_data/take5/GYM-5047.yml
+++ b/_data/take5/GYM-5047.yml
@@ -27,4 +27,5 @@ related_content:
   url: "https://vestibular.org/article/what-is-vestibular/"
 - label: "Attention deficit hyperactivity disorder (ADHD)"
   url: "https://www.nhs.uk/conditions/attention-deficit-hyperactivity-disorder-adhd/"
+skill_level: "Beginner"
 ---
