--- a/_data/take5/GYM-5049.yml
+++ b/_data/take5/GYM-5049.yml
@@ -7,7 +7,9 @@ url: /courses/take5/GYM-5049/
 poster_art: /img/take5/posters/gym-5049.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Prototyping"
+topic: "UX"
+subtopics:
+  - label: "Prototyping"
 video_ID: ohEtP5MuWFk
 video_duration: "4:59"
 featured: false
@@ -25,6 +27,7 @@ related_content:
   url: "https://help.figma.com/hc/en-us/articles/360056440594"
 - label: "Tips & tricks about Variants in Figma"
   url: "https://uxdesign.cc/tips-tricks-about-variants-in-figma-c5d209662e64"
+skill_level: "Intermediate"
 ---
 
 
