--- a/_data/take5/GYM-5001.yml
+++ b/_data/take5/GYM-5001.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5001/
 poster_art: /img/take5/posters/gym-5001.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Design & Development"
+topic: "Development"
 video_ID: zRNUPU2dujU
 video_duration: "4:59"
 featured: false
@@ -25,4 +25,5 @@ related_content:
   url: "https://stackoverflow.com/questions/21476380/background-size-on-ios"
 - label: "MDN: Viewport concepts"
   url: "https://developer.mozilla.org/en-US/docs/Web/CSS/Viewport_concepts"
+skill_level: "Intermediate"
 ---
