--- a/_data/take5/GYM-5003.yml
+++ b/_data/take5/GYM-5003.yml
@@ -5,10 +5,7 @@ date: 2019-10-30T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5003/
 poster_art: /img/take5/posters/gym-5003.jpg
-topic: "Design & Development"
-subtopics:
-  - label: CSS
-  - label: HTML
+topic: "Development"
 permalink: /courses/take5/:name
 live: true
 instructor: "Jeremy Osborn"
@@ -29,4 +26,5 @@ related_content:
   url: "https://snook.ca/archives/html_and_css/multiple-bg-css-gradients"
 - label: "Can I Use: CSS Gradients"
   url: "https://caniuse.com/css-gradients"
+skill_level: "Intermediate"
 ---
