--- a/_data/take5/GYM-5006.yml
+++ b/_data/take5/GYM-5006.yml
@@ -5,7 +5,7 @@ date: 2019-11-18T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5006/
 poster_art: /img/take5/posters/gym-5006.jpg
-topic: "User Experience"
+topic: "UX"
 live: true
 instructor: "Heather O'Neill"
 video_ID: FfQ55Q15xUA
@@ -19,4 +19,5 @@ related_content:
   url: "https://abookapart.com/products/practical-design-discovery"
 - label: "Optimal Workshop’s official guide to card sorting"
   url: "https://blog.optimalworkshop.com/card-sorting/"
+skill_level: "Beginner"
 ---
