--- a/_data/take5/GYM-5007.yml
+++ b/_data/take5/GYM-5007.yml
@@ -5,7 +5,7 @@ date: 2019-11-19T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5007/
 poster_art: /img/take5/posters/gym-5007.jpg
-topic: "User Experience"
+topic: "UX"
 live: true
 instructor: "Heather O'Neill"
 video_ID: UDekSJsMOC8
@@ -15,4 +15,5 @@ short_description: "Learn how to conduct a successful customer interview in this
 related_content:
 - label: "Listening deeply. An article by Indi Young"
   url: "https://indiyoung.com/listening-deeply/"
+skill_level: "Beginner"
 ---
