--- a/_data/take5/GYM-5010.yml
+++ b/_data/take5/GYM-5010.yml
@@ -5,7 +5,7 @@ date: 2019-11-22T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5010/
 poster_art: /img/take5/posters/gym-5010.jpg
-topic: "User Experience"
+topic: "UX"
 live: true
 instructor: "Jeremy Osborn"
 video_ID: PwuPv7JwzCA
@@ -17,4 +17,5 @@ related_content:
   url: "https://methods.18f.gov/discover/kj-method/"
 - label: "The KJ-Technique: A Group Process for Establishing Priorities an article by Jared Spool"
   url: "https://articles.uie.com/kj_technique/"
+skill_level: "Intermediate"
 ---
