--- a/_data/take5/GYM-5026.yml
+++ b/_data/take5/GYM-5026.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5026/
 poster_art: /img/take5/posters/gym-5026.jpg
 live: true
 instructor: "Mike Bifulco"
-topic: "Design & Development"
+topic: "Development"
 video_ID: ukPI1zlxKqg
 video_duration: "4:58"
 featured: false
@@ -25,4 +25,5 @@ related_content:
   url: "https://github.com/collections/github-pages-examples"
 - label: "Gymnasium: Introduction to Git and GitHub"
   url: "https://thegymnasium.com/courses/GYM/006/0/about"
+skill_level: "Intermediate"
 ---
