--- a/_data/take5/GYM-5029.yml
+++ b/_data/take5/GYM-5029.yml
@@ -7,7 +7,9 @@ url: /courses/take5/GYM-5029/
 poster_art: /img/take5/posters/gym-5029.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Prototyping"
+topic: "UX"
+subtopics:
+  - label: "Prototyping"
 video_ID: LnPEGhE90r4
 video_duration: "4:57"
 featured: false
@@ -23,4 +25,5 @@ related_content:
   url: "https://youtu.be/t82XRda5DnY"
 - label: "Gymnasium: Creating Advanced Animations in Figma"
   url: "https://thegymnasium.com/courses/take5/creating-advanced-animations-in-figma"
+skill_level: "Intermediate"
 ---
