--- a/_data/take5/GYM-5031.yml
+++ b/_data/take5/GYM-5031.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5031/
 poster_art: /img/take5/posters/gym-5031.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Design & Development"
+topic: "Development"
 video_ID: 0X4uxoKMwew
 video_duration: "4:59"
 featured: false
@@ -27,4 +27,5 @@ related_content:
   url: "https://developers.google.com/chart/interactive/docs/datatables_dataviews"
 - label: "Uxtools.co 2019 Design Tools Survey Results"
   url: "https://uxtools.co/survey-2019/"
+skill_level: "Intermediate"
 ---
