--- a/_data/take5/GYM-5034.yml
+++ b/_data/take5/GYM-5034.yml
@@ -7,7 +7,9 @@ url: /courses/take5/GYM-5034/
 poster_art: /img/take5/posters/gym-5034.jpg
 live: true
 instructor: "Ethan Marcotte"
-topic: "Design & Development"
+topic: "Development"
+subtopics:
+  - label: "Accessibility"
 video_ID: fk-eu9TmFNk
 video_duration: "4:58"
 featured: false
@@ -25,4 +27,5 @@ related_content:
   url: "https://snook.ca/archives/html_and_css/font-size-with-rem"
 - label: "Units of measure: two wrongs, and a few rights"
   url: "https://rwt.io/typography-tips/units-measure-two-wrongs-and-few-rights"
+skill_level: "Intermediate"
 ---
