--- a/_data/take5/GYM-5037.yml
+++ b/_data/take5/GYM-5037.yml
@@ -21,4 +21,5 @@ related_content:
   url: "http://universaldesign.ie/universaldesign/technology-ict/web-and-mobile-app-accessibility/web-accessibility-techniques/developer-s-introduction-and-index/content-section-4/dev-4-3-provide-accessible-alternatives-don-t-rely-on-pdf-word.html"
 - label: "Gymnasium: Using CSS Generated Content for Links"
   url: "https://thegymnasium.com/courses/take5/using-css-generated-content-for-links"
+skill_level: "Beginner"
 ---
