--- a/_data/take5/GYM-5048.yml
+++ b/_data/take5/GYM-5048.yml
@@ -23,4 +23,5 @@ related_content:
   url: "https://epilepsy.com/learn/triggers-seizures/photosensitivity-and-seizures"
 - label: "Understanding Success Criterion 2.3.1: Three Flashes or Below Threshold"
   url: "https://w3.org/tr/understanding-wcag20/seizure-does-not-violate.html"
+skill_level: "Beginner"
 ---
