--- a/_data/take5/GYM-5017.yml
+++ b/_data/take5/GYM-5017.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5017/
 poster_art: /img/take5/posters/gym-5017.jpg
 live: true
 instructor: "Anne Ditmeyer"
+instructor_bio: ""
 topic: "Career Skills"
 video_ID: ycCdyR-Oohs
 video_duration: "4:18"
