--- a/_data/take5/GYM-5023.yml
+++ b/_data/take5/GYM-5023.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5023/
 poster_art: /img/take5/posters/gym-5023.jpg
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
 topic: "Design"
 subtopics:
   - label: "Development"
