--- a/_data/take5/GYM-5028.yml
+++ b/_data/take5/GYM-5028.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5028/
 poster_art: /img/take5/posters/gym-5028.jpg
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
 topic: "Development"
 video_ID: VYhPXZvAD9k
 video_duration: "4:57"
