--- a/_data/take5/GYM-5038.yml
+++ b/_data/take5/GYM-5038.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5038/
 poster_art: /img/take5/posters/gym-5038.jpg
 live: true
 instructor: "Clarissa Peterson"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: 9ylBqOnEXos
 video_duration: "4:39"
