--- a/_data/take5/GYM-5040.yml
+++ b/_data/take5/GYM-5040.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5040/
 poster_art: /img/take5/posters/gym-5040.jpg
 live: true
 instructor: "Clarissa Peterson"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: CizNbSuRRew
 video_duration: "4:20"
