--- a/_data/take5/GYM-5004.yml
+++ b/_data/take5/GYM-5004.yml
@@ -5,9 +5,10 @@ date: 2019-10-31T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5004/
 poster_art: /img/take5/posters/gym-5004.jpg
-topic: "Development"
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
+topic: "Development"
 video_ID: VaHkQQ5xgac
 video_duration: "4:34"
 featured: false
