--- a/_data/take5/GYM-5006.yml
+++ b/_data/take5/GYM-5006.yml
@@ -5,9 +5,10 @@ date: 2019-11-18T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5006/
 poster_art: /img/take5/posters/gym-5006.jpg
-topic: "UX"
 live: true
 instructor: "Heather O'Neill"
+instructor_bio: ""
+topic: "UX"
 video_ID: FfQ55Q15xUA
 video_duration: "4:47"
 featured: false
