--- a/_data/take5/GYM-5008.yml
+++ b/_data/take5/GYM-5008.yml
@@ -5,9 +5,10 @@ date: 2019-11-20T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5008/
 poster_art: /img/take5/posters/gym-5008.jpg
-topic: "UX"
 live: true
 instructor: "Heather O'Neill"
+instructor_bio: ""
+topic: "UX"
 video_ID: eE0rJNHvAzs
 video_duration: "3:48"
 featured: false
