--- a/_data/take5/GYM-5009.yml
+++ b/_data/take5/GYM-5009.yml
@@ -5,9 +5,10 @@ date: 2019-11-21T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5009/
 poster_art: /img/take5/posters/gym-5009.jpg
-topic: "UX"
 live: true
 instructor: "Heather O'Neill"
+instructor_bio: ""
+topic: "UX"
 video_ID: I1uO3rwcG8U
 video_duration: "4:35"
 featured: false
