--- a/_data/take5/GYM-5010.yml
+++ b/_data/take5/GYM-5010.yml
@@ -5,9 +5,10 @@ date: 2019-11-22T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5010/
 poster_art: /img/take5/posters/gym-5010.jpg
-topic: "UX"
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
+topic: "UX"
 video_ID: PwuPv7JwzCA
 video_duration: "4:50"
 featured: false
