--- a/_data/take5/GYM-5011.yml
+++ b/_data/take5/GYM-5011.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5011/
 poster_art: /img/take5/posters/gym-5011.jpg
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
 topic: "UX"
 subtopics:
   - label: "Prototyping"
