--- a/_data/take5/GYM-5012.yml
+++ b/_data/take5/GYM-5012.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5012/
 poster_art: /img/take5/posters/gym-5012.jpg
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
 topic: "Development"
 subtopics:
 subtopics:
