--- a/_data/take5/GYM-5014.yml
+++ b/_data/take5/GYM-5014.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5014/
 poster_art: /img/take5/posters/gym-5014.jpg
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
 topic: "UX"
 subtopics:
   - label: "Prototyping"
