--- a/_data/take5/GYM-5018.yml
+++ b/_data/take5/GYM-5018.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5018/
 poster_art: /img/take5/posters/gym-5018.jpg
 live: true
 instructor: "Lee Andrese"
+instructor_bio: ""
 topic: "Career Skills"
 video_ID: iLI4I2XnjpU
 video_duration: "5:00"
