--- a/_data/take5/GYM-5019.yml
+++ b/_data/take5/GYM-5019.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5019/
 poster_art: /img/take5/posters/gym-5019.jpg
 live: true
 instructor: "Anne Ditmeyer"
+instructor_bio: ""
 topic: "Career Skills"
 video_ID: m1vO-v2UGmk
 video_duration: "4:13"
