--- a/_data/take5/GYM-5025.yml
+++ b/_data/take5/GYM-5025.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5025/
 poster_art: /img/take5/posters/gym-5025.jpg
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
 topic: "Development"
 video_ID: ZLR0rLm_zEM
 video_duration: "4:57"
