--- a/_data/take5/GYM-5027.yml
+++ b/_data/take5/GYM-5027.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5027/
 poster_art: /img/take5/posters/gym-5027.jpg
 live: true
 instructor: "Jeremy Osborn"
+instructor_bio: ""
 topic: "Career Skills"
 video_ID: AcJPrHGIIL8
 video_duration: "4:59"
