--- a/_data/take5/GYM-5032.yml
+++ b/_data/take5/GYM-5032.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5032/
 poster_art: /img/take5/posters/gym-5032.jpg
 live: true
 instructor: "Ethan Marcotte"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: Y2vjyDxkIPs
 video_duration: "4:59"
