--- a/_data/take5/GYM-5036.yml
+++ b/_data/take5/GYM-5036.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5036/
 poster_art: /img/take5/posters/gym-5036.jpg
 live: true
 instructor: "Ethan Marcotte"
+instructor_bio: ""
 topic: "Development"
 subtopics:
   - label: "Accessibility"
