--- a/_data/take5/GYM-5037.yml
+++ b/_data/take5/GYM-5037.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5037/
 poster_art: /img/take5/posters/gym-5037.jpg
 live: true
 instructor: "Clarissa Peterson"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: qfdOIriWM90
 video_duration: "3:52"
