--- a/_data/take5/GYM-5039.yml
+++ b/_data/take5/GYM-5039.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5039/
 poster_art: /img/take5/posters/gym-5039.jpg
 live: true
 instructor: "Clarissa Peterson"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: npto50RJpDc
 video_duration: "4:28"
