--- a/_data/take5/GYM-5042.yml
+++ b/_data/take5/GYM-5042.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5042/
 poster_art: /img/take5/posters/gym-5042.jpg
 live: true
 instructor: "Clarissa Peterson"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: z1z-kfVtFpk
 video_duration: "4:40"
