--- a/_data/take5/GYM-5043.yml
+++ b/_data/take5/GYM-5043.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5043/
 poster_art: /img/take5/posters/gym-5043.jpg
 live: true
 instructor: "Clarissa Peterson"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: 7Q1bVzu0KxE
 video_duration: "3:36"
