--- a/_data/take5/GYM-5047.yml
+++ b/_data/take5/GYM-5047.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5047/
 poster_art: /img/take5/posters/gym-5047.jpg
 live: true
 instructor: "Clarissa Peterson"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: TpvlucvoUPw
 video_duration: "4:38"
