--- a/_data/take5/GYM-5048.yml
+++ b/_data/take5/GYM-5048.yml
@@ -7,6 +7,7 @@ url: /courses/take5/GYM-5048/
 poster_art: /img/take5/posters/gym-5048.jpg
 live: true
 instructor: "Clarissa Peterson"
+instructor_bio: ""
 topic: "Accessibility"
 video_ID: Njn6CQwiafQ
 video_duration: "3:41"
