--- a/_data/take5/GYM-5002.yml
+++ b/_data/take5/GYM-5002.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5002/
 poster_art: /img/take5/posters/gym-5002.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Academic Director of Aquent Gymnasium"
 topic: "Development"
 video_ID: Q66-TDbHiIs
 video_duration: "4:48"
 featured: false
-short_description: "Learn how to make an image appear inside the outline of plain text using CSS in this hands-on tutorial with Jeremy Osborn, Academic Director of Aquent Gymnasium."
+short_description: "Learn how to make an image appear inside the outline of plain text using CSS in this hands-on tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
