--- a/_data/take5/GYM-5005.yml
+++ b/_data/take5/GYM-5005.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5005/
 poster_art: /img/take5/posters/gym-5005.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Academic Director of Aquent Gymnasium"
 topic: "Development"
 video_ID: _12cCrECCdY
 video_duration: "4:59"
 featured: false
-short_description: "Learn how to turn a grayscale image into a duotone using CSS blend modes in this hands-on tutorial with Jeremy Osborn, Academic Director of Aquent Gymnasium."
+short_description: "Learn how to turn a grayscale image into a duotone using CSS blend modes in this hands-on tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
