Updated short description

--- a/_data/take5/GYM-5007.yml
+++ b/_data/take5/GYM-5007.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5007/
 poster_art: /img/take5/posters/gym-5007.jpg
 live: true
 instructor: "Heather O'Neill"
-instructor_bio: ""
+instructor_bio: "CEO of Pixels for Humans"
 topic: "UX"
 video_ID: UDekSJsMOC8
 video_duration: "4:05"
 featured: false
-short_description: "Learn how to conduct a successful customer interview in this tutorial with Heather O’Neill, CEO of Pixels for Humans."
+short_description: "Learn how to conduct a successful customer interview in this tutorial."
 related_content:
 - label: "Listening deeply. An article by Indi Young"
   url: "https://indiyoung.com/listening-deeply/"
