--- a/_data/take5/GYM-5008.yml
+++ b/_data/take5/GYM-5008.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5008/
 poster_art: /img/take5/posters/gym-5008.jpg
 live: true
 instructor: "Heather O'Neill"
-instructor_bio: ""
+instructor_bio: "CEO of Pixels for Humans"
 topic: "UX"
 video_ID: eE0rJNHvAzs
 video_duration: "3:48"
 featured: false
-short_description: "Learn how to write survey questions to gather high-level information about your market in this tutorial with Heather O’Neill, CEO of Pixels for Humans."
+short_description: "Learn how to write survey questions to gather high-level information about your market in this tutorial."
 related_content:
 - label: "The Essential Guide to Writing Effective Survey Questions an article by Jennifer Leigh Brown"
   url: "https://www.uxbooth.com/articles/the-essential-guide-to-writing-effective-survey-questions/"
