--- a/_data/take5/GYM-5009.yml
+++ b/_data/take5/GYM-5009.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5009/
 poster_art: /img/take5/posters/gym-5009.jpg
 live: true
 instructor: "Heather O'Neill"
-instructor_bio: ""
+instructor_bio: "CEO of Pixels for Humans"
 topic: "UX"
 video_ID: I1uO3rwcG8U
 video_duration: "4:35"
 featured: false
-short_description: "Learn how to lead a usability test in order to see how people interact with a product in this tutorial with Heather O’Neill, CEO of Pixels for Humans."
+short_description: "Learn how to lead a usability test in order to see how people interact with a product in this tutorial."
 related_content:
 - label: "The Art of Guerrilla Usability Testing an article by David Peter Simon"
   url: "https://www.uxbooth.com/articles/the-art-of-guerrilla-usability-testing/"
