--- a/_data/take5/GYM-5050.yml
+++ b/_data/take5/GYM-5050.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5050/
 poster_art: /img/take5/posters/gym-5050.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning for Aquent Gymnasium"
 topic: "UX"
 subtopics:
   - label: "Prototyping"
 video_ID: 5wvVjAZgf0Y
 video_duration: "4:59"
 featured: false
-short_description: "Auto Layout in Figma allows you to create frames, components or even entire layouts, that reflow as the contents change, making designing interfaces easier than ever. Learn how to get up and running with the fundamentals of Auto Layout in this tutorial by Jeremy Osborn, Director of Learning for Aquent Gymnasium."
+short_description: "Auto Layout in Figma allows you to create frames, components or even entire layouts, that reflow as the contents change, making designing interfaces easier than ever. Learn how to get up and running with the fundamentals of Auto Layout in this tutorial."
 project_file_source: Figma Community
 project_files:
 - label: "Starting Project"
