--- a/_data/take5/GYM-5049.yml
+++ b/_data/take5/GYM-5049.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5049/
 poster_art: /img/take5/posters/gym-5049.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning for Aquent Gymnasium"
 topic: "UX"
 subtopics:
   - label: "Prototyping"
 video_ID: ohEtP5MuWFk
 video_duration: "4:59"
 featured: false
-short_description: "Variants make working with components in Figma easier and more intuitive to use. Learn how to get up and running with the fundamentals of variants in this tutorial by Jeremy Osborn, Director of Learning for Aquent Gymnasium."
+short_description: "Variants make working with components in Figma easier and more intuitive to use. Learn how to get up and running with the fundamentals of variants in this tutorial."
 project_file_source: Figma Community
 project_files:
 - label: "Starting Project"
