--- a/_data/take5/GYM-5048.yml
+++ b/_data/take5/GYM-5048.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5048/
 poster_art: /img/take5/posters/gym-5048.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Accessibility"
 video_ID: Njn6CQwiafQ
 video_duration: "3:41"
 featured: false
-short_description: "You don’t have to forgo animation entirely to accommodate users with disabilities. Learn how to ensure that animated elements won’t compromise the accessibility of your website in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "You don’t have to forgo animation entirely to accommodate users with disabilities. Learn how to ensure that animated elements won’t compromise the accessibility of your website in this tutorial."
 related_content:
 - label: "An Introduction to the Reduced Motion Media Query"
   url: "https://css-tricks.com/introduction-reduced-motion-media-query/"
