--- a/_data/take5/GYM-5047.yml
+++ b/_data/take5/GYM-5047.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5047/
 poster_art: /img/take5/posters/gym-5047.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Accessibility"
 video_ID: TpvlucvoUPw
 video_duration: "4:38"
 featured: false
-short_description: "A few of the most common animation techniques used on the web can make users affected by motion dizzy or even sick. Learn how to avoid these techniques in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "A few of the most common animation techniques used on the web can make users affected by motion dizzy or even sick. Learn how to avoid these techniques in this tutorial."
 related_content:
 - label: "Designing Safer Web Animation For Motion Sensitivity"
   url: "https://alistapart.com/article/designing-safer-web-animation-for-motion-sensitivity/"
