--- a/_data/take5/GYM-5046.yml
+++ b/_data/take5/GYM-5046.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5046/
 poster_art: /img/take5/posters/gym-5046.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Accessibility"
 video_ID: mCIFslxi1yU
 video_duration: "4:44"
 featured: false
-short_description: "With more video and audio being published online than ever before, it’s critical to make this content as accessible as possible. Learn strategies for improving multimedia accessibility on your websites in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "With more video and audio being published online than ever before, it’s critical to make this content as accessible as possible. Learn strategies for improving multimedia accessibility on your websites in this tutorial."
 related_content:
 - label: "Audio Description for the Blind (Video)"
   url: "https://accessibility.psu.edu/video/audiodescription/"
