--- a/_data/take5/GYM-5045.yml
+++ b/_data/take5/GYM-5045.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5045/
 poster_art: /img/take5/posters/gym-5045.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Development"
 subtopics:
   - label: "Accessibility"
@@ -15,7 +15,7 @@ subtopics:
 video_ID: m3M7QbDE3Lg
 video_duration: "4:33"
 featured: false
-short_description: "Forms are a frequent source of accessibility problems on websites. Learn some tips and tricks on how to make your web forms easier to use and understand in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "Forms are a frequent source of accessibility problems on websites. Learn some tips and tricks on how to make your web forms easier to use and understand in this tutorial."
 related_content:
 - label: "Validating Input"
   url: "https://www.w3.org/WAI/tutorials/forms/validation/"
