--- a/_data/take5/GYM-5044.yml
+++ b/_data/take5/GYM-5044.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5044/
 poster_art: /img/take5/posters/gym-5044.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Development"
 subtopics:
   - label: "Accessibility"
 video_ID: 72nrJJAf_Ak
 video_duration: "4:43"
 featured: false
-short_description: "Learn how to make sure everyone can complete the forms on your website and learn how to properly use the label element in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "Learn how to make sure everyone can complete the forms on your website and learn how to properly use the label element in this tutorial."
 related_content:
 - label: "Labeling Controls"
   url: "https://www.w3.org/WAI/tutorials/forms/labels/"
