--- a/_data/take5/GYM-5042.yml
+++ b/_data/take5/GYM-5042.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5042/
 poster_art: /img/take5/posters/gym-5042.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Accessibility"
 video_ID: z1z-kfVtFpk
 video_duration: "4:40"
 featured: false
-short_description: "Take the guesswork out of designing for color blindness and learn how to improve the accessibility of your websites in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "Take the guesswork out of designing for color blindness and learn how to improve the accessibility of your websites in this tutorial."
 related_content:
 - label: "Coblis - Color Blindness Simulator"
   url: "https://www.color-blindness.com/coblis-color-blindness-simulator/"
