--- a/_data/take5/GYM-5040.yml
+++ b/_data/take5/GYM-5040.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5040/
 poster_art: /img/take5/posters/gym-5040.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Accessibility"
 video_ID: CizNbSuRRew
 video_duration: "4:20"
 featured: false
-short_description: "Learn best practices for using alt text to improve the accessibility of the images on your website in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "Learn best practices for using alt text to improve the accessibility of the images on your website in this tutorial."
 related_content:
 - label: "When Not to use alt attributes"
   url: "https://www.sitepoint.com/the-hidden-nuggets-of-wcag2-when-not-to-use-alt-attributes/"
