--- a/_data/take5/GYM-5039.yml
+++ b/_data/take5/GYM-5039.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5039/
 poster_art: /img/take5/posters/gym-5039.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Accessibility"
 video_ID: npto50RJpDc
 video_duration: "4:28"
 featured: false
-short_description: "Learn how to make the data tables in your HTML documents more accessible for everyone in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "Learn how to make the data tables in your HTML documents more accessible for everyone in this tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Completed Project"
