--- a/_data/take5/GYM-5037.yml
+++ b/_data/take5/GYM-5037.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5037/
 poster_art: /img/take5/posters/gym-5037.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: ""
+instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
 topic: "Accessibility"
 video_ID: qfdOIriWM90
 video_duration: "3:52"
 featured: false
-short_description: "Learn how to leverage the inherent accessibility of HTML documents in this tutorial by Clarissa Peterson, a Chicago-based designer who specializes in user experience and content strategy."
+short_description: "Learn how to leverage the inherent accessibility of HTML documents in this tutorial."
 related_content:
 - label: "HTML: A good basis for accessibility"
   url: "https://developer.mozilla.org/en-US/docs/Learn/Accessibility/HTML"
