--- a/_data/take5/GYM-5036.yml
+++ b/_data/take5/GYM-5036.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5036/
 poster_art: /img/take5/posters/gym-5036.jpg
 live: true
 instructor: "Ethan Marcotte"
-instructor_bio: ""
+instructor_bio: "the fellow who started that whole “responsive design” thing"
 topic: "Development"
 subtopics:
   - label: "Accessibility"
 video_ID: nt7p3CuxUzA
 video_duration: "4:55"
 featured: false
-short_description: "Learn how to create visually compelling and accessible drop caps on the web in this tutorial by Ethan Marcotte — the fellow who started that whole “responsive design” thing."
+short_description: "Learn how to create visually compelling and accessible drop caps on the web in this tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
