--- a/_data/take5/GYM-5034.yml
+++ b/_data/take5/GYM-5034.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5034/
 poster_art: /img/take5/posters/gym-5034.jpg
 live: true
 instructor: "Ethan Marcotte"
-instructor_bio: ""
+instructor_bio: "the fellow who started that whole “responsive design” thing"
 topic: "Development"
 subtopics:
   - label: "Accessibility"
 video_ID: fk-eu9TmFNk
 video_duration: "4:58"
 featured: false
-short_description: "Learn how to set flexible and accessible type sizes for a more user-friendly web in this tutorial by Ethan Marcotte — the fellow who started that whole “responsive design” thing."
+short_description: "Learn how to set flexible and accessible type sizes for a more user-friendly web in this tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
