--- a/_data/take5/GYM-5033.yml
+++ b/_data/take5/GYM-5033.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5033/
 poster_art: /img/take5/posters/gym-5033.jpg
 live: true
 instructor: "Ethan Marcotte"
-instructor_bio: ""
+instructor_bio: "the fellow who started that whole “responsive design” thing"
 topic: "Development"
 subtopics:
   - label: "Accessibility"
 video_ID: mmXdKhB7Ueg
 video_duration: "4:50"
 featured: false
-short_description: "Learn how to design beautiful and accessible link focus states in this tutorial by Ethan Marcotte — the fellow who started that whole “responsive design” thing."
+short_description: "Learn how to design beautiful and accessible link focus states in this tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
