--- a/_data/take5/GYM-5030.yml
+++ b/_data/take5/GYM-5030.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5030/
 poster_art: /img/take5/posters/gym-5030.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "UX"
 subtopics:
   - label: "Prototyping"
 video_ID: X-uDu6Wfdfc
 video_duration: "4:33"
 featured: false
-short_description: "Learn how to effectively use overlays in Figma in this tutorial by Jeremy Osborn, Academic Director at Aquent Gymnasium."
+short_description: "Learn how to effectively use overlays in Figma in this tutorial by Jeremy Osborn."
 project_file_source: GitHub
 project_files:
 - label: "Lesson Files"
