Updated short description

--- a/_data/take5/GYM-5010.yml
+++ b/_data/take5/GYM-5010.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5010/
 poster_art: /img/take5/posters/gym-5010.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Academic Director of Gymnasium"
 topic: "UX"
 video_ID: PwuPv7JwzCA
 video_duration: "4:50"
 featured: false
-short_description: "Learn how to silently collaborate with a team in order to get group consensus in this tutorial with Jeremy Osborn, Academic Director of Gymnasium."
+short_description: "Learn how to silently collaborate with a team in order to get group consensus in this tutorial."
 related_content:
 - label: "18F Methods instructions on the KJ method"
   url: "https://methods.18f.gov/discover/kj-method/"
