--- a/_data/take5/GYM-5011.yml
+++ b/_data/take5/GYM-5011.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5011/
 poster_art: /img/take5/posters/gym-5011.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Academic Director of Aquent Gymnasium"
 topic: "UX"
 subtopics:
   - label: "Prototyping"
 video_ID: VzdFLmK2t38
 video_duration: "4:59"
 featured: false
-short_description: "Learn how to use Smart Layout in Sketch in this hands-on tutorial with Jeremy Osborn, Academic Director of Aquent Gymnasium."
+short_description: "Learn how to use Smart Layout in Sketch in this hands-on tutorial."
 project_file_source: GitHub
 project_files:
 - label: "Lesson Files"
