--- a/_data/take5/GYM-5006.yml
+++ b/_data/take5/GYM-5006.yml
@@ -6,7 +6,7 @@ course_type: take5
 url: /courses/take5/GYM-5006/
 poster_art: /img/take5/posters/gym-5006.jpg
 live: true
-instructor: "Heather O'Neill"
+instructor: "Heather O’Neill"
 instructor_bio: "CEO of Pixels for Humans"
 topic: "UX"
 video_ID: FfQ55Q15xUA
