--- a/_data/take5/GYM-5002.yml
+++ b/_data/take5/GYM-5002.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5002/
 poster_art: /img/take5/posters/gym-5002.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: "Academic Director of Aquent Gymnasium"
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Development"
 video_ID: Q66-TDbHiIs
 video_duration: "4:48"
