--- a/_data/take5/GYM-5003.yml
+++ b/_data/take5/GYM-5003.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5003/
 poster_art: /img/take5/posters/gym-5003.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: "Academic Director of Aquent Gymnasium"
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Development"
 video_ID: SaO2hO-4yEY
 video_duration: "4:13"
