Update instructor bio

--- a/_data/take5/GYM-5005.yml
+++ b/_data/take5/GYM-5005.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5005/
 poster_art: /img/take5/posters/gym-5005.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: "Academic Director of Aquent Gymnasium"
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Development"
 video_ID: _12cCrECCdY
 video_duration: "4:59"
