--- a/_data/take5/GYM-5010.yml
+++ b/_data/take5/GYM-5010.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5010/
 poster_art: /img/take5/posters/gym-5010.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: "Academic Director of Gymnasium"
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "UX"
 video_ID: PwuPv7JwzCA
 video_duration: "4:50"
