--- a/_data/take5/GYM-5051.yml
+++ b/_data/take5/GYM-5051.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5051/
 poster_art: /img/take5/posters/gym-5051.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: "Director of Learning for Aquent Gymnasium"
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "UX"
 subtopics:
   - label: "Prototyping"
