Updated short description

--- a/_data/take5/GYM-5017.yml
+++ b/_data/take5/GYM-5017.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5017/
 poster_art: /img/take5/posters/gym-5017.jpg
 live: true
 instructor: "Anne Ditmeyer"
-instructor_bio: ""
+instructor_bio: "Creative Coach"
 topic: "Career Skills"
 video_ID: ycCdyR-Oohs
 video_duration: "4:18"
 featured: false
-short_description: "Learn how to have confidence in the stories you tell after making a career change in this tutorial with Anne Ditmeyer, creative coach."
+short_description: "Learn how to have confidence in the stories you tell after making a career change in this tutorial."
 related_content:
 - label: "Story Map by James Buckhouse"
   url: "https://medium.com/design-story/story-map-3cc64033128e"
