Update instructor bios
- Update Lee Andrese
- Update Ethan Marcotte
- Update Clarissa Peterson

--- a/_data/take5/GYM-5020.yml
+++ b/_data/take5/GYM-5020.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5020/
 poster_art: /img/take5/posters/gym-5020.jpg
 live: true
 instructor: "Lee Andrese"
-instructor_bio: "Principal of Akatheme"
+instructor_bio: "Vice President of Learning and Development at Onward Search"
 topic: "Career Skills"
 video_ID: CWHSqE5Es4c
 video_duration: "4:59"
