--- a/_data/take5/GYM-5016.yml
+++ b/_data/take5/GYM-5016.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5016/
 poster_art: /img/take5/posters/gym-5016.jpg
 live: true
 instructor: "Lee Andrese"
-instructor_bio: "Principal of Akatheme"
+instructor_bio: "Vice President of Learning and Development at Onward Search"
 topic: "Career Skills"
 video_ID: 3WVDdGssP6Y
 video_duration: "4:35"
