--- a/_data/take5/GYM-5033.yml
+++ b/_data/take5/GYM-5033.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5033/
 poster_art: /img/take5/posters/gym-5033.jpg
 live: true
 instructor: "Ethan Marcotte"
-instructor_bio: "the fellow who started that whole “responsive design” thing"
+instructor_bio: "Partner at Autogram"
 topic: "Development"
 subtopics:
   - label: "Accessibility"
