--- a/_data/take5/GYM-5040.yml
+++ b/_data/take5/GYM-5040.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5040/
 poster_art: /img/take5/posters/gym-5040.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
+instructor_bio: "Strategy Director at Forum One"
 topic: "Accessibility"
 video_ID: CizNbSuRRew
 video_duration: "4:20"
