--- a/_data/take5/GYM-5045.yml
+++ b/_data/take5/GYM-5045.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5045/
 poster_art: /img/take5/posters/gym-5045.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
+instructor_bio: "Strategy Director at Forum One"
 topic: "Development"
 subtopics:
   - label: "Accessibility"
