--- a/_data/take5/GYM-5046.yml
+++ b/_data/take5/GYM-5046.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5046/
 poster_art: /img/take5/posters/gym-5046.jpg
 live: true
 instructor: "Clarissa Peterson"
-instructor_bio: "a Chicago-based designer who specializes in user experience and content strategy"
+instructor_bio: "Strategy Director at Forum One"
 topic: "Accessibility"
 video_ID: mCIFslxi1yU
 video_duration: "4:44"
