Update short description
- Remove inline byline

--- a/_data/take5/GYM-5030.yml
+++ b/_data/take5/GYM-5030.yml
@@ -14,7 +14,7 @@ subtopics:
 video_ID: X-uDu6Wfdfc
 video_duration: "4:33"
 featured: false
-short_description: "Learn how to effectively use overlays in Figma in this tutorial by Jeremy Osborn."
+short_description: "Learn how to effectively use overlays in Figma in this tutorial."
 project_file_source: GitHub
 project_files:
 - label: "Lesson Files"
