Update youtube channel
- Add live youtube channel for testing

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -26,4 +26,4 @@ twitch_layout: "video-with-chat"
 twitch_theme: "dark"
 
 # youtube
-youtube_channel: "live_stream?channel=12345"
+youtube_channel: "live_stream?channel=UCcSnI3n2Jd-2qgncC6k_S1g"
